# tm-mode

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD-LOG.md  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.ko.md  CONTRIBUTING.md  INSTALL.md  L2-PLAN.md  LICENSE  NOTICE.ko.md  NOTICE.md  README.en.md  README.ko.md  README.md  SECURITY.md  SPEC.md  install.sh  pyproject.toml  team.config.example.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml
archive/build-history/: BUILD-LOG.md
archive/planning/: BACKLOG-kb-governance.md  SPEC-BUILD.md  ai-harness-analysis-spec.md  build-report.md  pitch-draft.md  team.config.example-draft.json  toolkit-oss-separation-plan.md
archive/spec-drafts/: 04-install.md
conformance/: check.py
conformance/scenarios/: 01-on-banner.json  02-context-injection.json  03-issue-create.json  04-log-accumulate.json  05-off-persist.json  README.md
docs/: BACKLOG.md
docs/archive/: 2026-06-25-L2-redesign.md
docs/scenarios/: README.md  onboard-introducer.md  onboard-member.md  reset.md
docs/spec/: 00-overview.md  07-bash-write-guard-design.md  README.md  (+4 more)
infra/: credentials.py  git_ops.py  guidelines.en.md  guidelines.md  i18n.py  install.py  install_lib.py  io_encoding.py  providers.py  teammode.py  workday.py
maintainer_tests/: test_release_pin.py  test_validation_distribution_boundary.py
npm/: package.json
providers/: google.json  linear.json  notion.json  slack.json
spec/: 01-team-memory.md  02-hook-manifest.md  03-conformance.md  04-install.md  05-onboard-skill.md
tests/: conftest.py  test_adapter_claude.py  test_adapter_codex.py  test_adapter_windows.py  test_agent_publication_e2e.py  test_agent_selection.py  test_async_push.py  test_auto_commit_sync_warning.py  test_auto_pull.py  test_banner_fenced_output.py  test_banner_picker.py  test_check.py  test_check_mcp_s2.py  test_cli_join_wizard.py  test_clone_and_go_docs.py  test_codex_integration_faults.py  test_codex_normalize_e2e.py  test_codex_placeholder_brick.py  test_codex_sync_state_preserve.py  test_codex_trust_check.py  test_commit.py  test_confirm_action_s6.py  test_context.py  test_cp949_encoding.py  test_credentials_l2e.py  test_delete_no_index_p2.py  test_detect_host_wired.py  test_detect_loop.py  test_edit_lease_cleanup.py  test_git_ops.py  test_git_ops_net.py  test_git_ops_reconcile.py  test_greeting_farewell.py  test_guard.py  test_handlers_s1.py  test_help_text.py  test_hooks_i18n.py  test_hooks_l2g.py  test_host_detect.py  test_i18n.py  (+75 more)
(+70 files in other folders)
