[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tm-mode"
version = "0.1.0"
description = "Turn your team mode on — cross-agent team memory bootstrapper for AI coding agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "T-Gates" }]
keywords = ["ai", "agent", "claude", "codex", "team", "memory", "git"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]
dependencies = []  # stdlib only (git/gh are host prerequisites, not pip deps)

[project.urls]
Homepage = "https://github.com/T-Gates/tm-mode"
Repository = "https://github.com/T-Gates/tm-mode"

[project.scripts]
tm-mode = "teammode.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/teammode"]

[tool.hatch.build.targets.sdist]
# 패키지는 런처(src/teammode)만 — infra/ 스킬·훅·엔진은 번들하지 않는다(template repo 가 공급).
include = ["src/teammode", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
